src/.app-gateway/1.1-Deployment-app-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-gateway
  template:
    metadata:
      labels:
        app: app-gateway
        version: latest
    spec:
      containers:
        - env:
            - name: RMQ_PASSWORD
              value: V_KgZIxoDG14XMT3-R7QwXdOHQlofEwE
            - name: RMQ_PROTOCOLO
              value: amqps
            - name: RMQ_URL
              value: shrimp.rmq.cloudamqp.com/enrfxamp
            - name: RMQ_USER
              value: enrfxamp
          image: manscalh/app-gateway:latest
          imagePullPolicy: Always
          name: app-gateway
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
      restartPolicy: Always
