src/.app-gateway/1.2-Deployment-app-sensor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-sensor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-sensor
  template:
    metadata:
      labels:
        app: app-sensor
        version: latest
    spec:
      containers:
        - env:
            - name: RMQ_PASSWORD
              value: V_KgZIxoDG14XMT3-R7QwXdOHQlofEwE
            - name: RMQ_PROTOCOLO
              value: amqps
            - name: RMQ_URL
              value: shrimp.rmq.cloudamqp.com/enrfxamp
            - name: RMQ_USER
              value: enrfxamp
          image: manscalh/app-sensor:latest
          imagePullPolicy: Always
          name: app-sensor
          ports:
            - containerPort: 3001
              hostPort: 3001
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
      restartPolicy: Always
