src/.app-gateway/3-Service-app-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-gateway-service
spec:
  type: LoadBalancer
  selector:
    app: app-gateway
  ports:
  - port: 3000        #SERVICE URL
    targetPort: 3000  #CONTAINER
    # nodePort: 32605   #CLUSTER
