src/.app-gateway/4-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-gateway-vs
spec:
  hosts: 
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
    - route:  
      - destination:
          host: app-gateway-service
        weight: 100
