src/.app-gateway/4.1-VirtualService with routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-gateway-vs
spec:
  hosts: 
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
  - name: "redirect-sensors-data"
    match:
    - uri:
        exact: "/api/sensors-data"
    route:
    - destination:
        host: app-gateway-service
        subset: v2

  - name: "sensors-data"
    match:
    - uri:
        prefix: "/api/gateways"
    route:
    - destination:
        host: app-gateway-service
        subset: v1
