src/.app-gateway/8-CircuitBreak.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-gateway-circuit-breaker
spec:
  host: app-gateway-service
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
